2007-05-22  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (get_current_resolution): surivive XRandR returning weird
	results for some dual-screen setups. This fixes the crash in bug
	#356520, but a proper fix for handling this situation is still
	necessary, unless this is just a driver/X bug...

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* display-properties.desktop.in.in: renamed Bugzilla product.

2007-03-23  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (show_resolution): add 720x576 (PAL) to the list of valid
	resolutions. Closes bug #325548.

2007-03-21  Jens Granseuer  <jensgr@gmx.net>

	* main.c: uppercase the rotation options. Closes bug #410959.

2007-03-01  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (create_dialog): fix double-free reported by Sandino
	Flores-Moreno. Closes bug #413352.

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: Mark a struct static.

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: (wrap_in_label), (create_dialog):
	Don't leak the resolution. Pass NULL to gtk_label_new
	to do less work. Bug #376949.

2006-09-15  Brian Cameron <brian.cameron@sun.com>

	Fixes #356075

	* main.c (apply_config, revert_config): make sure we never pass
	negative values for the rates.

2006-08-18  Rodrigo Moya <rodrigo@novell.com>

	* main.c (create_dialog): free 'resolution' string after using it,
	not before. Found by Kjartan Maraas  <kmaraas@gnome.org>.

2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348838

	* display-properties.desktop.in.in: Fixed GNOME Bugzilla fields.

2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* main.c: (create_rotate_menu): fix build with gcc-2.95,
	  patch by Jens Granseuer <jensgr@gmx.net> (Closes: #347611)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: Mark some functions static.

2005-07-20  Rodrigo Moya <rodrigo@novell.com>

	* main.c (get_screensaver_command): new function to get the correct
	screensaver command to run.